k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-explorer-backend-deployment
  namespace: backend
  labels:
    app: cost-explorer-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cost-explorer-backend
  template:
    metadata:
      labels:
        app: cost-explorer-backend
    spec:
      containers:
      - name: cost-explorer-backend
        image: cost-explorer-backend
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "300m"
        ports:
        - containerPort: 3000
