k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cost-explorer-deployment
  namespace: frontend
  labels:
    app: cost-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cost-explorer
  template:
    metadata:
      labels:
        app: cost-explorer
    spec:
      containers:
      - name: app
        image: cost-explorer
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "500Mi"
            cpu: "300m"
        ports:
        - containerPort: 3000
