k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cost-explorer-service-backend
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: cost-explorer-backend
  ports:
    - port: 3000
      targetPort: 3000
