k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cost-explorer-service-frontend
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: cost-explorer-frontend
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30080
