k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-cost-explorer-service
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: cost-explorer
  ports:
    - port: 8080
      targetPort: 3000
      nodePort: 30080
